# devlog-cli

./: .gitignore  CHANGELOG.md  LICENSE  README.md  UPGRADE_SUMMARY.md  config_template.json  migrate_v1_to_v2.py  pyproject.toml
src/devlog/: cli.py
tests/: __init__.py  test_cli.py
