[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "devlog-cli"
version = "0.2.0"
description = "An advanced command-line tool for developers to log their daily activities with categories, tags, search, and export capabilities."
readme = "README.md"
requires-python = ">=3.7"
authors = [
  { name = "Louie Llywton", email = "louie@example.com" },
]
keywords = ["productivity", "logging", "cli", "development", "categories", "tags", "search", "export"]
dependencies = []  # We have none! It's a strength.

[project.scripts]
devlog = "devlog.cli:main"  # This creates the 'devlog' terminal command

[project.urls]
Homepage = "https://github.com/louiellywton/devlog-cli"
Repository = "https://github.com/louiellywton/devlog-cli"
Issues = "https://github.com/louiellywton/devlog-cli/issues"